--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"; rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+
+
 </head>
 <body>
     <nav>
@@ -14,5 +17,20 @@
            <li><a href="#">Feedback</a></li>
         </ul>
     </nav>
+ <section class="hero">
+            <div class="px-4 py-5 my-5 text-center"> 
+                <h1 class="display-5 fw-bold" style="color: #FFFFFF;"></h1>
+
+               <div class="col-lg-6 mx-auto"> 
+                    <p class="lead mb-4">
+                        rolo nait silksong
+                    </p> 
+                    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center"> 
+                        <a href="https://store.steampowered.com/"><button type="button" class="btn btn-outline-secondary btn-lg px-4">Download</button> </a>
+                    </div>
+                </div> 
+            </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"; integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+
   </body>
 </html>
