--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
                         rolo nait silksong
                     </p> 
                     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center"> 
-                        <a href="https://store.steampowered.com/"><button type="button" class="btn btn-outline-secondary btn-lg px-4">Download</button> </a>
+                        <a href="https://store.steampowered.com/app/1030300/Hollow_Knight_Silksong/"
+                            target="_blank" 
+         rel="noopener noreferrer"><button type="button" class="btn btn-outline-secondary btn-lg px-4">Download</button> </a>
                     </div>
                 </div> 
             </div>
