--- a/index.html
+++ b/index.html
@@ -1,38 +1,63 @@
 <!DOCTYPE html>
+
 <html lang="pt-br">
+
 <head>
+
     <meta charset="UTF-8">
+
     <link rel="stylesheet" href="style.css">
+
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"; rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
-
 </head>
+
 <body>
+
     <nav>
+
         <div class="logo">HOLLOW KNIGHT: SILKSONG</div>
+
         <ul class="menu">
+
             <li><a href="#">Visão geral</a></li>
+
             <li><a href="#">Jogabilidade</a></li>          
+
             <li><a href="#">Personagens</a></li>
+
            <li><a href="#">Feedback</a></li>
+
         </ul>
+
     </nav>
+
  <section class="hero">
+
             <div class="px-4 py-5 my-5 text-center"> 
+
                 <h1 class="display-5 fw-bold" style="color: #FFFFFF;"></h1>
 
                <div class="col-lg-6 mx-auto"> 
+
                     <p class="lead mb-4">
-                        rolo nait silksong
+
+                        Descubra um reino vasto e amaldiçoado em Hollow Knight: Silksong! Explore, lute e sobreviva enquanto você ascende ao pico de uma terra governada pela seda e por canções.
+
                     </p> 
+
                     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center"> 
-                        <a href="https://store.steampowered.com/app/1030300/Hollow_Knight_Silksong/"
-                            target="_blank" 
-         rel="noopener noreferrer"><button type="button" class="btn btn-outline-secondary btn-lg px-4">Download</button> </a>
+
+                        <a href="https://store.steampowered.com/app/1030300/Hollow_Knight_Silksong/"                      target="_blank"          rel="noopener noreferrer">                    <button>Download                       </button> </a>
+
                     </div>
+
                 </div> 
+
             </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"; integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
   </body>
+
 </html>
