--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"; rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
 </head>
 
@@ -16,13 +16,13 @@
 
     <nav>
 
-        <div class="logo">HOLLOW KNIGHT: SILKSONG</div>
+      <div class="logo">HOLLOW KNIGHT: SILKSONG</div>
 
         <ul class="menu">
 
-            <li><a href="#">Visão geral</a></li>
+            <li><a href="index.html">Visão geral</a></li>
 
-            <li><a href="#">Jogabilidade</a></li>          
+            <li><a  href="jogabilidade.html">Jogabilidade</a></li>          
 
             <li><a href="#">Personagens</a></li>
 
@@ -36,8 +36,7 @@
 
             <div class="px-4 py-5 my-5 text-center"> 
 
-                <h1 class="display-5 fw-bold" style="color: #FFFFFF;"></h1>
-
+               
                <div class="col-lg-6 mx-auto"> 
 
                     <p class="lead mb-4">
@@ -48,16 +47,24 @@
 
                     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center"> 
 
-                        <a href="https://store.steampowered.com/app/1030300/Hollow_Knight_Silksong/"                      target="_blank"          rel="noopener noreferrer">                    <button>Download                       </button> </a>
+                        <a href="https://store.steampowered.com/app/1030300/Hollow_Knight_Silksong/"                      target="_blank"          rel="noopener noreferrer">                    <button>Download                       </button>
+                      </a>
+                      <a href="https://rickrolled.fr/"> <button>Download grátis!</button> </a>
 
                     </div>
 
                 </div> 
 
             </div>
+  </section>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"; integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+  <section class="textoVG">
+   Hollow Knight: Silksong é a aguardada sequência do aclamado metroidvania indie Hollow Knight, desenvolvido pelo Team Cherry. O jogo coloca os jogadores no controle de Hornet, a "Princesa Cavaleira" que foi uma figura coadjuvante proeminente no título original. A história começa com Hornet sendo capturada e levada para o novo e vasto reino de Fiarlongo. Seu objetivo é uma jornada de ascensão: ela deve escalar desde o fundo do reino até o topo, onde se encontra uma cidadela brilhante, enquanto desvenda os mistérios de sua prisão e do novo mundo.
 
+A jogabilidade mantém a base de exploração e combate 2D característica do gênero, mas é drasticamente transformada pela protagonista. Hornet é significativamente mais ágil e acrobática do que o Cavaleiro. Seu estilo de combate é mais rápido e fluído, utilizando sua icônica agulha com linha como arma principal para uma série de ataques e movimentos no ar. O sistema de cura foi alterado, utilizando o recurso "Silk" (Seda), que permite curar mais rapidamente, até mesmo durante saltos, embora exija um gerenciamento cuidadoso.
+
+Silksong substitui o sistema de "Encantos" por um novo sistema de ferramentas que Hornet pode criar e equipar, oferecendo uma customização do estilo de jogo do jogador. O mundo de Pharloom é maior e mais colorido que Hallownest, mas mantém a estética gótica e a atmosfera melancólica, apresentando biomas como grutas musgosas e pântanos nebulosos. Os jogadores encontrarão mais de 200 novos tipos de inimigos e mais de 40 chefes, cada um exigindo reflexos rápidos e estratégia. Além disso, o jogo incorpora um sistema de missões secundárias para enriquecer a exploração e a interação com os muitos NPCs, que muitas vezes pedem tarefas específicas, aprofundando o lore do reino regido pela seda e por canções. A combinação de dificuldade desafiadora, design de mundo interconectado e uma narrativa sutil e rica torna Silksong uma continuação épica e fiel ao legado do seu antecessor.
+  </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   </body>
-
 </html>
